--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "sass src/styles.scss src/styles.css",
-    "start": "live-server --port 8181"
+    "start": "live-server src --port=8181"
   },
   "devDependencies": {
     "live-server": "^1.2.2",
